--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.0.0",
   "description": "rapid modular email",
   "scripts": {
-    "serve": "browser-sync start --server dist --files '**/*'",
-    "templates:compile": "metalsmith",
+    "start": "npm run watch",
+    "watch": "concurrently 'npm run watch:templates' 'npm run serve'",
+    "serve": "browser-sync start --server --port 7777 --files 'hub/' --index 'dist/index.html'",
     "watch:templates": "nodemon --ext hbs --ignore node_modules/ --ignore /dist --exec 'npm run templates:compile'",
-    "watch": "parallelshell 'npm run watch:templates' 'npm run serve'",
-    "start": "npm run watch"
+    "templates:compile": "metalsmith"
   },
-  "author": "Omar Rasool",
+  "author": "Omar Rasool & Paul Graham",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "latest",
+    "concurrently": "^3.5.0",
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
     "metalsmith-in-place": "^1.4.4",
-    "parallelshell": "^2.0.0",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.11.0"
   }
 }
